# Fract-ol

./: CMakeLists.txt  Makefile  README.md
inc/: fractol.h
src/: choose_color_scheme.c  color.c  control.c  count_fractals.c  draw_fractals.c  error_messages.c  init_fractals.c  julia.c  main.c  palette.c  threads.c
